# GitCloud

./: .gitignore  CLAUDE.md  INSTALL.md  MANIFEST.in  README.md  banner.txt  cleanup.py  main.py  pyproject.toml  requirements.txt  setup.py
dockerfiles/golang/: Dockerfile
dockerfiles/nodejs/: Dockerfile
gitcloud/: __init__.py  main.py.backup
gitcloud/analyzer/: analyer.py  cloud_service_spec.py  docker_images.py  github_fetcher.py  resource_spec.py
gitcloud/provider/: __init__.py
gitcloud/provider/tencent/: credentials.py  network.py  tencent.py
website/: FEATURES.md  QUICKSTART.md  README.md  index.html  start-server.sh
website/css/: style.css
website/js/: main.js
